# LightClaw

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LLM_SPEED_OPTIMIZATION.md  QUICKSTART.md  README.md  SOCIAL_MEDIA_INTEGRATION.md  YOUTUBE_UPLOAD_SKILL.md  automation_pipeline.py  check_youtube_scope.py  get_youtube_token.py  install_automation.sh  lightclaw-automation.service  manage_automation.sh  optimize_llm_speed.sh  pyproject.toml  refresh_youtube_token.py  requirements.txt  run_automation_cron.sh  setup_youtube_oauth.sh  update_fb_token.py  upload_news_video.py  validate_setup.py  workflow_news_to_youtube.py
src/: main.py
src/agent/: context.py  loader.py  orchestrator.py  registry.py
src/api/: server.py
src/integrations/: facebook.py  gmail.py  google_calendar.py  instagram.py  llm.py  telegram.py  token_store.py  web_search.py  webchat.py  whatsapp.py  youtube.py
src/models/: schemas.py
src/skills/: __init__.py
src/skills/NewsExtractor/: clipper.py  run.bat  videoClipper.py  viral_fetcher.py
src/skills/calendar/: skill.py
src/skills/email/: skill.py
src/skills/events/: skill.py
src/skills/news_extractor/: __init__.py  skill.py
src/skills/youtube_upload/: __init__.py  skill.py
src/utils/: cdn_uploader.py  file_server.py  logger.py
tests/: test_llm_provider.py  test_orchestrator.py  test_registry_loader.py  test_skills.py
